<resources>
    <string name="app_name">Gerenciador Acadêmico</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Menu</string>
    <string name="closeDrawer">Menu</string>
    <string name="about_title">Sobre</string>
    <string name="about_message">App desenvolvido para a aula de MDS\nGrupo:\nHenrique Guarnieri\nGabriel Martins\nThalles Ferreira\nPedro Garcia</string>
    <string name="ok">OK</string>
    <string name="no_connection">Sem conexão de Internet</string>
    <string name="no_google_play">É preciso ter instalado Google Play Services</string>
    <string name="calendar_title">Google Calendar</string>
    <string name="calendar_about">Você pode conectar a sua conta para que suas atividades sejam adicionadas ao seu Google Calendar</string>
    <string name="calendar_connect">Conectar Conta Google</string>
    <string name="calendar_connected">Você já está conectado</string>
    <string name="sobre">Sobre</string>
    <string name="google_agenda">Google Agenda</string>
    <string name="add_semestre">Add Semester</string>
    <string name="semester_name_hint">Nome</string>
    <string name="semester_term_hint">Período</string>
    <string name="semester_year_hint">Ano</string>
    <string name="semester_bt">Adicionar Semestre</string>
    <string name="course_name_hint">Nome</string>
    <string name="course_schedule1_hint">Horario Primeira Aula</string>
    <string name="course_schedule2_hint">Horario Segunda Aula</string>
    <string name="course_add_bt">Adicionar Curso</string>
    <string name="add_course">Add Course</string>
    <string name="course_selection">Selecione Curso</string>
    <string name="course_dialog_hint">Selecione um curso</string>
</resources>
