<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/et_semester_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/semester_name_hint"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_semester_year"
        android:hint="@string/semester_year_hint"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_semester_term"
        android:hint="@string/semester_term_hint"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/bt_semester_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:text="@string/semester_bt"/>
</LinearLayout>