<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_calendar_title"
        android:text="@string/calendar_title"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_calendar_about"
        android:text="@string/calendar_about"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_calendar_connect"
        android:text="@string/calendar_connect"
        android:layout_margin="10dp"
        android:padding="20dp"
        />
</LinearLayout>